# tetris

./: .gitmodules  CMakeLists.txt  compile_sdl.bat
lib/: SDL3.lib  SDL3_main.lib
src/: main.cpp
